--- a/style.css
+++ b/style.css
@@ -1,10 +1,82 @@
-body{
-    background-color: #eeeeee;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-p,small,h1{
-    background-color: white;
-    padding: 10px;
-    margin: 10px;
-
+.main{
+     width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)40%, rgba(0,0,0,0.5)40%),url(BAC.jpg);
+    background-position:center;
+    background-size:cover;
+    height:100vh;
+    
 }
+.navbar{
+    width: 1000px;
+    height: 70ex;
+    margin: auto;}
+    
+    .icon{ 
+        width: 200px;
+        float: left;
+        height: 80px;
+    }
+
+    .logo{
+        color: rgb(13, 16, 10);
+        font-size: 45px;
+        font-family:  Georgia, Times, 'Times New Roman', serif;
+        padding-left: 35px;
+        float: left;
+        padding-top: 10px;
+
+    }
+
+    .menu{
+        width: 200px;
+        float: left;
+        height: 80px;
+    }
+    ul{
+        float: left;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    ul li{
+        list-style: none;
+        margin-left: 75px;
+        margin-top: 35px;
+        font-size: 22px;
+    }
+
+    ul li {
+        text-decoration: none;
+        color: rgb(15, 15, 14);
+        font-family: Arial;
+        font-weight: bold;
+        transition: 0.5s ease-in-out;
+    }
+
+    ul li :hover{
+        color:rgb(216, 157, 46)
+    }
+      .search{
+        width: 200px;
+        float:left;
+        margin: left 150px;
+      }
+    .search{
+        font-family: 'Times New Roman', Times, serif;
+        width: 500px;
+        height: 50px;
+        background:transparent;
+        border: 1px solid #e8ba14;
+        margin: top 15px;
+
+
+
+    }
+    
+    
